--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "discord-player": "^7.1.0",
     "discord-player-youtubei": "^1.5.0",
     "discord.js": "^14.21.0",
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "ffmpeg-static": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
